--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Do It With IT</title>
+  <title>DoItWithIT</title>
   <style>
     body {
       margin: 0;
@@ -150,7 +150,7 @@
       <button id="btn-pl" class="active">PL</button>
       <button id="btn-en">EN</button>
     </div>
-    <h1 id="site-title">Do It With IT</h1>
+    <h1 id="site-title">DoItWithIT</h1>
     <p id="site-desc">Realne wsparcie IT dla domu i małych firm</p>
   </header>
 
@@ -172,6 +172,7 @@
       <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA..." alt="Obsługa firmowa">
       Obsługa firmowa
     </div>
+     <img src="http://doitwith.it/obsluga_domowa.png" alt="Obsługa domowa">
     <div class="circle" data-key="home">
       <img src="http://doitwith.it/obsluga_domowa.png" alt="Obsługa domowa">
       Obsługa domowa
