--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+OK! 
 <!DOCTYPE html>
 <html lang="pl">
 <head>
@@ -156,38 +157,14 @@
 
   <div class="network">
     <div class="center">DoItWithIT</div>
-    <div class="circle" data-key="remote">
-      <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA..." alt="Zdalna pomoc">
-      Zdalna pomoc
-    </div>
-    <div class="circle" data-key="install">
-      <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA..." alt="Instalacja systemu">
-      Instalacja systemu
-    </div>
-    <div class="circle" data-key="peripherals">
-      <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA..." alt="Instalacja peryferiów">
-      Instalacja peryferiów
-    </div>
-    <div class="circle" data-key="business">
-      <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA..." alt="Obsługa firmowa">
-      Obsługa firmowa
-    </div>
-    <div class="circle" data-key="home">
-      <img src="http://doitwith.it/obsluga_domowa.png" alt="Obsługa domowa">
-      Obsługa domowa
-    </div>
-    <div class="circle" data-key="network">
-      <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA..." alt="Konfiguracja sieci">
-      Konfiguracja sieci
-    </div>
-    <div class="circle" data-key="structural">
-      <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA..." alt="Instalacje sieci strukturalnych">
-      Instalacje sieci strukturalnych
-    </div>
-    <div class="circle" data-key="fiber">
-      <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA..." alt="Spawanie światłowodów">
-      Spawanie światłowodów
-    </div>
+    <div class="circle" data-key="remote">Zdalna pomoc</div>
+    <div class="circle" data-key="install">Instalacja systemu</div>
+    <div class="circle" data-key="network">Konfiguracja sieci</div>
+    <div class="circle" data-key="peripherals">Instalacja peryferiów</div>
+    <div class="circle" data-key="home">Obsługa domowa</div>
+    <div class="circle" data-key="business">Obsługa firmowa</div>
+    <div class="circle" data-key="structural">Instalacje strukturalnych sieci teleinformatycznych</div>
+    <div class="circle" data-key="fiber">Spawanie i naprawa światłowodów</div>
   </div>
 
   <footer>
@@ -262,8 +239,8 @@
         const angle = i * angleStep;
         const x = centerX + radius * Math.cos(angle);
         const y = centerY + radius * Math.sin(angle);
-        circle.style.left = ${x}px;
-        circle.style.top = ${y}px;
+        circle.style.left = `${x}px`;
+        circle.style.top = `${y}px`;
       });
     }
 
@@ -271,7 +248,6 @@
       positionCircles();
       setLanguage('pl');
     });
-
     window.addEventListener('resize', positionCircles);
   </script>
 
