--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     </div>
 
     <div class="circle" data-key="home">
-      <img src="http://doitwith.it/obsluga_domowa.png" alt="Obsługa domowa">
+      <img src="obsluga_domowa.png" alt="Obsługa domowa">
       Obsługa domowa
     </div>
 
