--- a/index.html
+++ b/index.html
@@ -206,8 +206,14 @@
       <img src="obsluga_domowa.png" alt="Spawanie światłowodów">
       Spawanie światłowodów
     </div>
-  </div>
+  
+    <div class="circle" data-key="monitoring">
+      <img src="obsluga_domowa.png" alt="Monitoring">
+      Monitoring
+    </div>
+</div>
 
+  
   <footer>
     <p id="contact">Kontakt: <a href="mailto:kontakt@doitwith.it">kontakt@doitwith.it</a> | Tel: <a href="tel:+48123">+48 123</a></p>
     <p>&copy; 2025 DoItWithIT</p>
