--- a/index.html
+++ b/index.html
@@ -238,6 +238,8 @@
           business: "Obsługa firmowa",
           structural: "Instalacje strukturalnych sieci teleinformatycznych",
           fiber: "Spawanie i naprawa światłowodów"
+          monitoring: "Monitoring",
+
         }
       },
       en: {
@@ -252,6 +254,8 @@
           business: "Business support",
           structural: "Structured cabling installation",
           fiber: "Fiber splicing and repair"
+          monitoring: "Monitoring",
+
         }
       }
     };
