--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
           home: "Obsługa domowa",
           business: "Obsługa firmowa",
           structural: "Instalacje strukturalnych sieci teleinformatycznych",
-          fiber: "Spawanie i naprawa światłowodów"
+          fiber: "Spawanie i naprawa światłowodów",
           monitoring: "Monitoring",
 
         }
@@ -253,7 +253,7 @@
           home: "Home support",
           business: "Business support",
           structural: "Structured cabling installation",
-          fiber: "Fiber splicing and repair"
+          fiber: "Fiber splicing and repair",
           monitoring: "Monitoring",
 
         }
