--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
           business: "Obsługa firmowa",
           structural: "Instalacje strukturalnych sieci teleinformatycznych",
           fiber: "Spawanie i naprawa światłowodów",
-          monitoring: "Monitoring",
+          monitoring: "Monitoring"
 
         }
       },
@@ -254,7 +254,7 @@
           business: "Business support",
           structural: "Structured cabling installation",
           fiber: "Fiber splicing and repair",
-          monitoring: "Monitoring",
+          monitoring: "Monitoring"
 
         }
       }
