--- a/index.html
+++ b/index.html
@@ -198,13 +198,13 @@
     </div>
 
     <div class="circle" data-key="structural">
-      <img src="obsluga_domowa.png" alt="Instalacje sieci strukturalnych">
-      Instalacje sieci strukturalnych
+      <img src="obsluga_domowa.png" alt="Sieci strukturalne">
+      Sieci strukturalne
     </div>
 
     <div class="circle" data-key="fiber">
-      <img src="obsluga_domowa.png" alt="Spawanie światłowodów">
-      Spawanie światłowodów
+      <img src="obsluga_domowa.png" alt="Światłowody">
+      Światłowody
     </div>
   
     <div class="circle" data-key="monitoring">
@@ -236,8 +236,8 @@
           peripherals: "Instalacja peryferiów",
           home: "Obsługa domowa",
           business: "Obsługa firmowa",
-          structural: "Instalacje strukturalnych sieci teleinformatycznych",
-          fiber: "Spawanie i naprawa światłowodów",
+          structural: "Sieci strukturalne",
+          fiber: "Światłowody",
           monitoring: "Monitoring"
 
         }
@@ -252,8 +252,8 @@
           peripherals: "Peripherals setup",
           home: "Home support",
           business: "Business support",
-          structural: "Structured cabling installation",
-          fiber: "Fiber splicing and repair",
+          structural: "Structured cabling",
+          fiber: "Optical Fiber",
           monitoring: "Monitoring"
 
         }
