--- a/index.html
+++ b/index.html
@@ -92,26 +92,34 @@
       width: 110px;
       height: 110px;
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
       text-align: center;
       font-size: 0.85rem;
       transform: translate(-50%, -50%);
-      z-index: 1; /* Zapewniamy, że okręgi są na tle */
+      z-index: 1;
     }
 
     .circle img {
-      width: 60px; /* Dopasowanie rozmiaru obrazu */
+      width: 60px;
       height: 60px;
-      object-fit: cover; /* Obrazek wypełnia okrąg */
-      border-radius: 50%; /* Zaokrąglenie obrazka */
-      z-index: 2; /* Ustawiamy obrazek na wierzchu */
+      object-fit: cover;
+      border-radius: 50%;
+      z-index: 2;
+    }
+
+    .circle .label {
+      margin-top: 0.5rem;
+      font-size: 0.9rem;
+      display: block;
+      text-align: center;
     }
 
     .circle:hover {
       transform: scale(1.2) translate(-50%, -50%);
       background-color: #0055a5;
-      z-index: 20; /* Podniesienie z-index przy hover */
+      z-index: 20;
     }
 
     footer {
@@ -143,6 +151,11 @@
         padding: 0.5rem;
       }
 
+      .circle img {
+        width: 50px;
+        height: 50px;
+      }
+
       .center {
         width: 100px;
         height: 100px;
@@ -166,54 +179,52 @@
   <div class="network">
     <div class="center">Do It With IT</div>
 
-    <!-- Zaktualizowane obrazy wewnątrz okręgów -->
     <div class="circle" data-key="remote">
       <img src="obsluga_domowa.png" alt="Zdalna pomoc">
-      Zdalna pomoc
+      <span class="label">Zdalna pomoc</span>
     </div>
 
     <div class="circle" data-key="install">
       <img src="obsluga_domowa.png" alt="Instalacja systemu">
-      Instalacja systemu
+      <span class="label">Instalacja systemu</span>
     </div>
 
     <div class="circle" data-key="peripherals">
       <img src="obsluga_domowa.png" alt="Instalacja peryferiów">
-      Instalacja peryferiów
+      <span class="label">Instalacja peryferiów</span>
     </div>
 
     <div class="circle" data-key="business">
       <img src="obsluga_domowa.png" alt="Obsługa firmowa">
-      Obsługa firmowa
+      <span class="label">Obsługa firmowa</span>
     </div>
 
     <div class="circle" data-key="home">
       <img src="obsluga_domowa.png" alt="Obsługa domowa">
-      Obsługa domowa
+      <span class="label">Obsługa domowa</span>
     </div>
 
     <div class="circle" data-key="network">
       <img src="obsluga_domowa.png" alt="Konfiguracja sieci">
-      Konfiguracja sieci
+      <span class="label">Konfiguracja sieci</span>
     </div>
 
     <div class="circle" data-key="structural">
       <img src="obsluga_domowa.png" alt="Sieci strukturalne">
-      Sieci strukturalne
+      <span class="label">Sieci strukturalne</span>
     </div>
 
     <div class="circle" data-key="fiber">
       <img src="obsluga_domowa.png" alt="Światłowody">
-      Światłowody
+      <span class="label">Światłowody</span>
     </div>
-  
+
     <div class="circle" data-key="monitoring">
       <img src="obsluga_domowa.png" alt="Monitoring">
-      Monitoring
+      <span class="label">Monitoring</span>
     </div>
-</div>
+  </div>
 
-  
   <footer>
     <p id="contact">Kontakt: <a href="mailto:kontakt@doitwith.it">kontakt@doitwith.it</a> | Tel: <a href="tel:+48123">+48 123</a></p>
     <p>&copy; 2025 DoItWithIT</p>
@@ -239,7 +250,6 @@
           structural: "Sieci strukturalne",
           fiber: "Światłowody",
           monitoring: "Monitoring"
-
         }
       },
       en: {
@@ -255,7 +265,6 @@
           structural: "Structured cabling",
           fiber: "Optical Fiber",
           monitoring: "Monitoring"
-
         }
       }
     };
@@ -266,16 +275,16 @@
 
       document.querySelectorAll(".circle").forEach(el => {
         const key = el.dataset.key;
-        el.textContent = content[lang].circles[key] || "";
+        const label = el.querySelector(".label");
+        if (label && content[lang].circles[key]) {
+          label.textContent = content[lang].circles[key];
+        }
       });
 
       Object.keys(langButtons).forEach(l => {
         langButtons[l].classList.toggle("active", l === lang);
       });
     }
-
-    langButtons.pl.addEventListener("click", () => setLanguage("pl"));
-    langButtons.en.addEventListener("click", () => setLanguage("en"));
 
     function positionCircles() {
       const network = document.querySelector('.network');
@@ -287,7 +296,7 @@
       const angleStep = (2 * Math.PI) / circles.length;
 
       circles.forEach((circle, i) => {
-        const angle = i * angleStep - Math.PI / 2;
+        const angle = i * angleStep;
         const x = centerX + radius * Math.cos(angle);
         const y = centerY + radius * Math.sin(angle);
         circle.style.left = `${x}px`;
