--- a/index.html
+++ b/index.html
@@ -180,22 +180,22 @@
     <div class="center">Do It With IT</div>
 
     <div class="circle" data-key="remote">
-      <img src="obsluga_domowa.png" alt="Zdalna pomoc">
+      <img src="zdalna_pomoc.png" alt="Zdalna pomoc">
       <span class="label">Zdalna pomoc</span>
     </div>
 
     <div class="circle" data-key="install">
-      <img src="obsluga_domowa.png" alt="Instalacja systemu">
+      <img src="instalacja_systemu.png" alt="Instalacja systemu">
       <span class="label">Instalacja systemu</span>
     </div>
 
     <div class="circle" data-key="peripherals">
-      <img src="obsluga_domowa.png" alt="Instalacja peryferiów">
+      <img src="instalacja_peryferiow.png" alt="Instalacja peryferiów">
       <span class="label">Instalacja peryferiów</span>
     </div>
 
     <div class="circle" data-key="business">
-      <img src="obsluga_domowa.png" alt="Obsługa firmowa">
+      <img src="obsluga_firmowa.png" alt="Obsługa firmowa">
       <span class="label">Obsługa firmowa</span>
     </div>
 
