--- a/index.html
+++ b/index.html
@@ -101,16 +101,14 @@
       z-index: 1;
     }
 
-    .img-wrapper {
-      width: 130px;
-      height: 130px;
-      border-radius: 50%;
-      background-color: transparent;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      overflow: hidden;
-    }
+   .img-wrapper {
+  width: auto;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 
     .img-wrapper img {
       width: 80%;
