--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
     <div class="circle" data-key="remote">
       <div class="img-wrapper">
-        <img src="zdalna_pomoc.png" alt="Zdalna pomoc">
+        <img src="pomoc_zdalna.png" alt="Zdalna pomoc">
       </div>
       <span class="label">Zdalna pomoc</span>
     </div>
@@ -229,28 +229,28 @@
 
     <div class="circle" data-key="network">
       <div class="img-wrapper">
-        <img src="obsluga_domowa.png" alt="Konfiguracja sieci">
+        <img src="konfiguracja_sieci.png" alt="Konfiguracja sieci">
       </div>
       <span class="label">Konfiguracja sieci</span>
     </div>
 
     <div class="circle" data-key="structural">
       <div class="img-wrapper">
-        <img src="obsluga_domowa.png" alt="Sieci strukturalne">
+        <img src="sieci_strukturalne.png" alt="Sieci strukturalne">
       </div>
       <span class="label">Sieci strukturalne</span>
     </div>
 
     <div class="circle" data-key="fiber">
       <div class="img-wrapper">
-        <img src="obsluga_domowa.png" alt="Światłowody">
+        <img src="swiatlowody.png" alt="Światłowody">
       </div>
       <span class="label">Światłowody</span>
     </div>
 
     <div class="circle" data-key="monitoring">
       <div class="img-wrapper">
-        <img src="obsluga_domowa.png" alt="Monitoring">
+        <img src="monitoring.png" alt="Monitoring">
       </div>
       <span class="label">Monitoring</span>
     </div>
