--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
     <div class="circle" data-key="remote">
       <img src="pomoc_zdalna.png" alt="Zdalna pomoc">
-      <span class="label">Zdalna pomoc</span>
+      <span class="label"></span>
     </div>
 
     <div class="circle" data-key="install">
