--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         siteDesc: "Realne wsparcie IT dla domu i małych firm",
         contact: 'Kontakt: <a href="mailto:kontakt@doitwith.it">kontakt@doitwith.it</a> | Tel: <a href="tel:+48123">+48 123</a>',
         circles: {
-          remote: "Zdalna pomoc",
+          remote: " ",
           install: "Instalacja systemu",
           network: "Konfiguracja sieci",
           peripherals: "Instalacja peryferiów",
